updated readme & optimized some layouts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
         <link rel="icon" href="img/favicon.ico" sizes="48x48" >
     </head>
-    <body class="display-grid" id="body">
+    <body class="display-flex collumn" id="body">
         <main class="display-flex" id="main">
             <header class="display-flex menu-content" id="header">
                 <h1 class="menu-content">Mental Math, <span class="big-heading-span menu-content">a place for you to finally end that math-phobia you have.</span></h1>
